# LogoAPI

./: .gitignore  README.md  README_English.md
C/: CLogo++.cpp  CLogo++.hpp  CLogo.c  CLogo.h  CMakeLists.txt  main.cpp
C/Clients/: ESP8266LogoClient.cpp  ESP8266LogoClient.hpp  SocketLogoClient.cpp  SocketLogoClient.hpp
C/src/: CLogo++.cpp  CLogo.c  CLogo.h
C/src/Clients/: SocketLogoClient.cpp  SocketLogoClient.hpp
Python/: py_logo.py
